Seguridad/proxy/iptables-arptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jun 23 19:28:36 2024
*filter
:INPUT DROP [353:46938]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [182207:757462754]
:PORTSCAN - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 777 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4555 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4556 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec --limit-burst 3 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j LOG --log-prefix "HTTP Traffic: "
-A INPUT -p tcp -m tcp --dport 443 -j LOG --log-prefix "HTTPS Traffic: "
-A FORWARD -j LOG --log-prefix "IPTables-FORWARD: "
-A FORWARD -i wan -o lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lan -o wan -j ACCEPT
-A PORTSCAN -j DROP
COMMIT
# Completed on Sun Jun 23 19:28:36 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jun 23 19:28:36 2024
*nat
:PREROUTING ACCEPT [2356:165913]
:INPUT ACCEPT [660:34804]
:OUTPUT ACCEPT [755:46327]
:POSTROUTING ACCEPT [2035:120203]
-A PREROUTING -i lan -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 4556
-A PREROUTING -i lan -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 4555
-A POSTROUTING -o wan -j MASQUERADE
COMMIT
# Completed on Sun Jun 23 19:28:36 2024
